# fields-lm

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  H100_SMOKE_TEST.txt  NOTICE  PUBLISHING_QUICKSTART.md  README.md  SECURITY.md  SHA256SUMS_RELEASE.txt  SHA256SUMS_SOURCE.txt  SOURCE_IDENTITY.txt  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PUBLISHING.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  RESULTS.md
examples/: inference.py  training_step.py
hf/: README.md
scripts/: assemble_release_on_h100.sh  check_python_syntax.py  collect_release_environment.sh  export_hf_checkpoint.py  prepare_hf_release.sh  release_preflight.sh  scan_public_tree.py  seal_release.sh  smoke_test_h100.py  validate_hf_roundtrip.py
src/fields_official/: __init__.py  fields_official.py  hub.py
src/fields_official/reference/: field_fusion_final_closure_suite.py  field_only_v4_chunked_triton_wiki100.py  final_closure_arena_core.py  official_arena_core.py
src/fields_official/reference/official_source/: OFFICIAL_SOURCE_MANIFEST.json  field_delta_span_phase_ablation_v12.py  field_fusion_300m_screen_v20.py  field_fusion_delta_quality_ablation_v29.py  field_fusion_final_ablation_v26.py  field_fusion_finalists_49m_v30.py  field_fusion_gap_closure_v33.py  field_fusion_gap_kernel_v32.py  field_fusion_lr_calibration_v34.py  field_fusion_pcaf_long_infer_v31.py  field_fusion_quality_memory_gate_v22.py  field_fusion_recipe_memory_v27.py  field_fusion_reengineering_r1_redundancy_map.py  field_fusion_scaling_confirmation_v28.py  (+15 more)
tests/: test_hub_contract.py  test_manifest_snapshot.py  test_public_contract.py  test_source_integrity.py
