[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fields-lm"
version = "0.1.0"
description = "Audited runtime and frozen reference implementation for Fields LM"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Artur do Nascimento", email = "artur@msctechnology.com.br"},
]
maintainers = [
  {name = "MSC Technology", email = "artur@msctechnology.com.br"},
]
keywords = [
  "language-model",
  "long-context",
  "state-space-model",
  "pytorch",
  "mamba",
  "causal-memory",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.7",
  "numpy>=1.24",
  "huggingface-hub>=0.30",
  "safetensors>=0.5",
  "tokenizers>=0.21",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.11",
]
hf = ["transformers>=4.51"]

[project.urls]
Homepage = "https://github.com/Multisymboliccore/fields-lm"
Repository = "https://github.com/Multisymboliccore/fields-lm"
Issues = "https://github.com/Multisymboliccore/fields-lm/issues"
Documentation = "https://github.com/Multisymboliccore/fields-lm/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["src/fields_official/reference"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
